Tweet over 100+ char no longer stretches container

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -99,4 +99,5 @@ footer {
   margin-bottom: 1em;
   margin-top: 1em;
   font-size: 24px;
+  word-break: break-word;
 }
